name:               file-system-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/esjmb/use-haskell-api#readme
license:             BSD3
license-file:        LICENSE
author:              David Doyle
maintainer:          ddoyle3@tcd.ie
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , FileSystemClientAPI
                     , FileSystemAuthServerAPI
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , bson-generic
                     , aeson
  default-language:    Haskell2010


